--- a/DecoratorDemo/DecoratorDemo.csproj
+++ b/DecoratorDemo/DecoratorDemo.csproj
@@ -43,12 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component\LibraryItem.cs" />
+    <Compile Include="ConcreteComponent\Book.cs" />
+    <Compile Include="ConcreteComponent\Video.cs" />
+    <Compile Include="ConcreteDecorator\Borrowable.cs" />
+    <Compile Include="ConcreteDecorator\Decorator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
